src/terminal/tests/snapshots/snapshot_tests__stdout_after_step_ok_interactive.snap
---
source: src/terminal/tests/snapshot_tests.rs
expression: sanitized_output(&term)
---
✔  Simple Step (Done) [TIME]
>>> [STDOUT] Should be below the step
