src/terminal/tests/snapshots/snapshot_tests__step_auto_run_interactive.snap
---
source: src/terminal/tests/snapshot_tests.rs
expression: sanitized_output(&term)
---
*  Compile Core
