src/terminal/tests/snapshots/snapshot_tests__step_fail_inserts_error_node_interactive.snap
---
source: src/terminal/tests/snapshot_tests.rs
expression: sanitized_output(&term)
---
✖  Database Migration (fail) [TIME]
│
│ issue:    Duplicate key
│
│ context:  Table 'users'
│
│ solution: Drop table and retry
