src/terminal/tests/snapshots/snapshot_tests__step_fail_without_run_interactive.snap
---
source: src/terminal/tests/snapshot_tests.rs
expression: sanitized_output(&term)
---
✖  Instant Fail (fail) [TIME]
│
│ issue:    Config not found
