src/terminal/tests/snapshots/snapshot_tests__step_happy_path_with_run_interactive.snap
---
source: src/terminal/tests/snapshot_tests.rs
expression: sanitized_output(&term)
---
✔  Compile Core (compiled in 0.5s) [TIME]
