src/terminal/tests/snapshots/snapshot_tests__step_immediate_ok_without_run_interactive.snap
---
source: src/terminal/tests/snapshot_tests.rs
expression: sanitized_output(&term)
---
✔  Check Cache (cache hit) [TIME]
