src/terminal/tests/snapshots/snapshot_tests__step_multiple_runs_override_status_interactive.snap
---
source: src/terminal/tests/snapshot_tests.rs
expression: sanitized_output(&term)
---
✔  Download (100% done) [TIME]
