src/terminal/tests/snapshots/snapshot_tests__step_run_plain.snap
---
source: src/terminal/tests/snapshot_tests.rs
expression: sanitized_output(&term)
---
[WAIT] Compile Core
[START] Compile Core (linking objects)
